--- a/package.json
+++ b/package.json
@@ -6,17 +6,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch -i"
   },
   "dependencies": {
-    "@types/node": "20.1.1",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
+    "@headlessui/react": "^1.7.14",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@tanstack/react-query": "^4.29.5",
+    "axios": "^1.3.4",
+    "moment": "^2.29.4",
+    "mongodb": "^5.4.0",
+    "mongoose": "^7.1.1",
+    "nanoid": "^4.0.2",
+    "next": "13.2.4",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.0",
+    "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.33",
+    "@types/react-beautiful-dnd": "^13.1.4",
+    "@types/react-dom": "18.0.11",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.37.0",
+    "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "node-mocks-http": "^1.12.2",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "supertest": "^6.3.3",
+    "tailwindcss": "^3.3.1"
   }
 }
